# ORTSegDemo

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/bangwhe/ort/javasegdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/bangwhe/ort/javasegdemo/: MainActivity.java  ORTAnalyzer.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/bangwhe/ort/javasegdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
native_infer/: build.gradle
native_infer/src/androidTest/java/com/bangwhe/ort/native_infer/: ExampleInstrumentedTest.java
native_infer/src/main/: AndroidManifest.xml
native_infer/src/main/cpp/: CMakeLists.txt  native_infer.cpp
native_infer/src/main/java/com/bangwhe/ort/native_infer/: MainActivity.java  NativeInference.java
native_infer/src/main/res/values/: strings.xml
native_infer/src/test/java/com/bangwhe/ort/native_infer/: ExampleUnitTest.java
